Redone sidebar and completed other feedback

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 scion_assessment_review_template_S9bRH.xlsx
+.~lock.scion_assessment_review_template_S9bRH.xlsx#
+.~lock.scion_assessment_review_template_S9bRH.xlsx#
